<resources>
    <string name="app_name">TurnByTurn</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="hint_address">Enter Address</string>
    <string name="parent_profile">parent_profile</string>
    <string name="profile_type">I am</string>
    <string name="submit">Submit</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="invite">Invite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="input_driver_bus_number">Enter your bus number</string>
    <string name="input_driver_contact_number">Contact Number</string>
    <string name="contact_image">Image</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <!--<string name="server_client_id">server_client_id</string>-->
    <string name="server_client_id">add server client id here</string>
    <string name="invitation">You got invitation,Download https://TurnByTurn/app/andriod</string>


    <string name="content_authority">com.udacity.turnbyturn</string>


    <string name="driverTitle">Start or Stop Ride</string>
    <string name="parentTitle">Live Ride</string>
    <string name="my_stop">My Stops</string>
    <string name="trip_dashBoard">Dash Board</string>
    <string name="trip_start">Start Trip</string>
    <string name="trip_stop">Stop Trip</string>
    <string name="share_using">Share Using</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="profiletype">PROFILE_TYPE</string>
    <string name="user_sign_in">USER_SIGN_IN</string>
    <string name="completed">COMPLETED</string>
    <string name="response">response</string>
    <string name="profile_selection">PROFILE_SELECTION</string>
    <string name="profile_selection_error_parent">Select As Parent</string>
    <string name="profile_selection_error_driver">Select As Driver</string>
    <string name="driver_bus_details">DRIVER_BUS_DETAILS</string>
    <string name="empty_not_valid">Field cannot be empty</string>
    <string name="pick_drop"><![CDATA[Pick & Drop location]]></string>
    <string name="phonecountry_code">+91</string>
    <string name="replcae">0</string>
    <string name="success">SUCCESS</string>
    <string name="asdriver">siginasdriver</string>
    <string name="select_location">Select Location</string>
    <string name="appwidget_text">TunrByTurn widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="submit_but_detils">Submit Bus and Contact Details</string>
    <string name="invite_contact">Send Invitation Selected Contact</string>
    <string name="profile_type_submit">Profile Type Selected</string>
    <string name="sign_in">Google Sign in</string>
    <string name="all_permission_are_required">All Permission are required</string>
    <string name="invite_contact_list">INVITE_CONTACT_LIST</string>
    <string name="parent_stop">PARENT_STOP</string>
    <string name="invite_parents_with_location">INVITE_PARENTS_WITH_LOCATION</string>
    <string name="start_profile">START_PROFILE</string>
    <string name="siginasparent">siginasparent</string>
    <string name="user_profiletype">profiletype</string>
    <string name="select_parent">Select Parent</string>
    <string name="select_driver">Select Driver</string>
    <string name="invitation_data">invitation</string>
    <string name="parent">parent</string>
    <string name="profile_type_parent">profiletype</string>
    <string name="contactnumber">contactNumber</string>
    <string name="driverbusnumber">driverbusnumber</string>
    <string name="drivercontactnumber">drivercontactnumber</string>
    <string name="implementListner">must implement OnFragmentInteractionListener</string>
    <string name="username">name</string>
    <string name="userprofilepic">photourl</string>
    <string name="useremail">email</string>
    <string name="usergid">gid</string>
    <string name="imei">imei</string>
    <string name="serverauthcode">serverauthcode</string>
    <string name="driverid">driverid</string>
    <string name="stops">stops</string>
    <string name="stopID">stopID</string>
    <string name="locationaddress">address</string>
    <string name="landmark">landmark</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="pushtype">type</string>
    <string name="welcome_push">welcome</string>
    <string name="deviceregisterid">deviceregisterid</string>
    <string name="regId">regId</string>
    <string name="invitation_send">Invitation Send</string>
    <string name="generic_failure">Generic failure</string>
    <string name="no_service">No service</string>
    <string name="nullpdu">Null PDU</string>
    <string name="radio_off">Radio off</string>
    <string name="invitation_delivered">Invitation delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="sms_send">SMS_SENT</string>
    <string name="sms_delivered">SMS_DELIVERED</string>
    <string name="contactNumber">contactNumber</string>
    <string name="invalid">is not valid contact to send invitation</string>
    <string name="lat">lat</string>
    <string name="longi">longi</string>
    <string name="contacts">contacts</string>
    <string name="googleservicesnotfount">Google Play Services is not available.</string>
    <string name="resolution_required">Location settings are not satisfied. Show the user a dialog to  upgrade location settings</string>
    <string name="request_check_setting">PendingIntent unable to execute request</string>
    <string name="settings_chnages">\"Location settings are inadequate, and cannot be fixed here. Dialog not created</string>
    <string name="photourl">photourl</string>
    <string name="parentcontactnumber">parentcontactnumber</string>
    <string name="status">status</string>
    <string name="fail">FAIL</string>
    <string name="invresponse">INVRESPONSE</string>
    <string name="data">data</string>
    <string name="id">id</string>
    <string name="userid">userid</string>
    <string name="profile_sync_sucess">Profile Sync Success</string>
    <string name="driver_sync_sucess">Driver Sync Success</string>
    <string name="service_missing">SERVICE MISSING</string>
    <string name="update_req">UPDATE_REQUIRED</string>
    <string name="play_services_result">Play Service result</string>
    <string name="location_setting">All location settings are satisfied.</string>
    <string name="current_location">You Current Location</string>
    <string name="settings_chnag_unavilable">Location settings are inadequate, and cannot be fixed here. Dialog not created.</string>
    <string name="pendingintent_unable">PendingIntent unable to execute request.</string>
    <string name="google_client_loding">Google Client Loding</string>
    <string name="service_already">Service already</string>
    <string name="running">running</string>
    <string name="service_not">Service Not</string>
    <string name="location">location</string>
    <string name="submit_driver_stop">Submit Driver Stop</string>
    <string name="licensesdialog">LicensesDialog</string>
    <string name="licensesdialogurl">http://psdev.de</string>
    <string name="copyright"><![CDATA[Copyright 2013 Philip Schiffer <admin@psdev.de>]]></string>
    <string name="startwithzero">0</string>
    <string name="result_ok">User agreed to make required location settings changes</string>
    <string name="ok">OK</string>
    <string name="result_canceled">User chose not to make required location settings changes</string>
    <string name="location_sucess">All location settings are satisfied.</string>
    <string name="usergidtoken">gidtoken</string>
    <string name="warning">Something wrong , Please validated API Key</string>
    <string name="add_button">Add Button</string>
    <string name="profile_selection_type">Profile Selection</string>
    <string name="profile_parent">Parent Profile</string>
    <string name="profile_driver">Profile Driver</string>

</resources>
