<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driver_bus_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.turnbyturn.TurnByTurn"
    >

    <ImageView
        android:id="@+id/school_bus_logo"
        android:layout_width="69dp"
        android:layout_height="60dp"
        android:src="@drawable/schoolbus"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.23000002"
        android:layout_marginBottom="300dp" />

    <EditText
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:gravity="top"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/driver_bus_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/school_bus_logo"
        app:layout_constraintVertical_bias="0.11"
        android:hint="@string/input_driver_bus_number"
        android:textColorHint="@color/colorAccent"
        android:inputType="text"

        tools:ignore="TextFields" />

    <EditText
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:inputType="phone"
        android:gravity="top"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/driver_contact_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/input_driver_contact_number"
        app:layout_constraintTop_toBottomOf="@+id/driver_bus_number"
        app:layout_constraintVertical_bias="0.11"
        />

    <Button
        android:id="@+id/bus_driver"
        android:layout_width="0dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:theme="@style/MySubmitButton"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit" />

</android.support.constraint.ConstraintLayout>
