<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prent_stop_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.turnbyturn.TurnByTurn"
    tools:ignore="MissingConstraints"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/home"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.060000002"
    android:layout_marginBottom="300dp" />





    <EditText
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:hint="Enter nearest landmark"
        android:textColorHint="@color/colorDark"
        android:gravity="top"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="HardcodedText,SpUsage" />

    <EditText
        android:layout_width="288dp"
        android:layout_height="139dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="top"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/edit_text_address"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:text="@string/address"
        android:textSize="15sp"
        android:hint="@string/hint_address" />


    <Button
        android:id="@+id/profile_selection_button"
        android:layout_width="0dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:theme="@style/MySubmitButton"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit" />

    <LinearLayout
        android:id="@+id/map_fragment_container"
        android:layout_width="0dp"
        android:layout_height="171dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_selection_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>



