<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.turnbyturn.TurnByTurn"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/invite_info"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:text="@string/profile_type"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="normal"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />




    <RadioGroup
        android:id="@+id/profile_selection_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintVertical_bias="0.39">



        <RadioButton
            android:id="@+id/parent_profile_selection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/MyRadioButton"
            android:layout_gravity="start"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/driver_profile_selection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/MyRadioButton"
            android:layout_gravity="start"
            android:layout_margin="10dp" />

        </RadioGroup>
    <ImageView
        android:layout_width="89dp"
        android:layout_height="59dp"
        app:srcCompat="@drawable/parents"
        android:id="@+id/imageView6"
        app:layout_constraintLeft_toRightOf="@+id/profile_selection_button_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp" />
    <ImageView
        android:layout_width="89dp"
        android:layout_height="59dp"
        app:srcCompat="@drawable/busdriver"
        android:id="@+id/paretn"
        app:layout_constraintLeft_toRightOf="@+id/profile_selection_button_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp" />


    <EditText
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:inputType="phone"
        android:gravity="top"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/parent_contact_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="15sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/input_driver_contact_number"
        app:layout_constraintVertical_bias="0.11"
        android:layout_marginBottom="216dp"
        app:layout_constraintHorizontal_bias="0.58"
        android:visibility="gone" />

    <Button
        android:contentDescription="@string/profile_type_submit"
        android:id="@+id/profile_selection_button"
        android:layout_width="0dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:theme="@style/MySubmitButton"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        app:layout_constraintHorizontal_bias="0.0" />




</android.support.constraint.ConstraintLayout>
