<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/driver_stop_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.turnbyturn.TurnByTurn"
    tools:ignore="MissingConstraints"
    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/home"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        android:layout_marginBottom="300dp" />


    <EditText
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:hint="Landmark"
        android:gravity="top"
        android:ems="10"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/driver_stop_landmark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="HardcodedText,SpUsage" />

    <EditText
        android:layout_width="287dp"
        android:layout_height="83dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="top"
        android:textColor="@color/colorAccent"
        android:theme="@style/MyEditText"
        android:id="@+id/driver_stop_address"
        app:layout_constraintLeft_toLeftOf="@+id/driver_stop_landmark"
        app:layout_constraintRight_toRightOf="@+id/driver_stop_landmark"
        app:layout_constraintTop_toBottomOf="@+id/driver_stop_landmark"
        android:textSize="15sp"
        android:hint="@string/hint_address"
        app:layout_constraintHorizontal_bias="1.0" />


    <Button
        android:id="@+id/invite_to_parent"
        android:layout_width="0dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:theme="@style/MySubmitButton"
        android:background="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit" />

    <LinearLayout
        android:id="@+id/map_fragment_container"
        android:layout_width="288dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@+id/driver_stop_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="288dp"
            android:layout_height="101dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/navigation"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/pick_location"
        app:layout_constraintBottom_toBottomOf="@+id/driver_stop_landmark"
        app:layout_constraintRight_toRightOf="@+id/driver_stop_landmark"
        app:layout_constraintTop_toTopOf="@+id/driver_stop_landmark"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="Select Location" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="0dp"
        android:layout_height="292dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:divider="@color/colorDark"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginBottom="48dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|left|end"
        app:rippleColor="@color/colorPrimaryDark"
        android:src="@drawable/invitenew"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/invite_contact"
        app:layout_constraintHorizontal_bias="0.9" />

</android.support.constraint.ConstraintLayout>



